--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body{
 /*=================HEADER=========================*/
 
 .header{
-    background-color: orange;
+    background-color: blue;
     width: 100%;
     height: 50px;
     top: 0;
