--- a/style.css
+++ b/style.css
@@ -132,18 +132,18 @@ body{
     
     /*=================RECIEPE PAGE=========================*/
 
-#reciepe {
+#recipe {
     padding-top: 50px;
 }
 
 
 /*=====================RECIEPE DETAILS =========================*/
 
-.reciepe-details img{
-    width: 100%;
+.recipe-details img{
+    width: 90%;
 }
 
-.reciepe-details h1{
+.recipe-details h1{
     font-size: 25px;
     text-align: center;
     border: 5px solid #1a1a1a;
